tests/baselines/reference/parserErrorRecovery_ExtendsOrImplementsClause4.errors.txt
parserErrorRecovery_ExtendsOrImplementsClause4.ts(1,17): error TS2304: Cannot find name 'A'.
parserErrorRecovery_ExtendsOrImplementsClause4.ts(1,29): error TS1097: 'implements' list cannot be empty.


==== parserErrorRecovery_ExtendsOrImplementsClause4.ts (2 errors) ====
    class C extends A implements {
                    ~
!!! error TS2304: Cannot find name 'A'.
                                
!!! error TS1097: 'implements' list cannot be empty.
    }